api-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: synergychat-api
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
